# drunken-team

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AI_INSTRUCTION.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Drunken-Team-Guide.md  INTEGRATION_GUIDE.md  Integration-Guide.md  LICENSE  Planv2.md  README.md  SECURITY.md  SESSION_CHECKPOINT.md  USER_GUIDE.md  WORKFLOW_GUIDE.md  drunken-team.json  pr42_comments.json  pr43_comments.json  pr44_comments.json  pyproject.toml  release_notes.md  requirements-dev.txt  requirements-lock.txt  requirements.txt  scratch_delete_jira.py
.agents/: AGENTS.md
.agents/skills/agentic-systems-specialist/: SKILL.md
.agents/skills/aitech-specialist/: SKILL.md
.agents/skills/ask-boss/: SKILL.md
.agents/skills/desktop-frontend-dev/: SKILL.md
.agents/skills/devops-engineer/: SKILL.md
.agents/skills/electron-ipc-protocol/: SKILL.md
.agents/skills/fintech-specialist/: SKILL.md
.agents/skills/fullstack-engineer/: SKILL.md
.agents/skills/game-developer/: SKILL.md
.agents/skills/insurtech-specialist/: SKILL.md
.agents/skills/khit-wikhro-yaekyae/: SKILL.md
.agents/skills/mobile-developer/: SKILL.md
.agents/skills/native-android/: SKILL.md
.agents/skills/product-manager/: SKILL.md
.agents/skills/qa-engineer/: SKILL.md
.agents/skills/voice-ai-specialist/: SKILL.md
.agents/skills/zero-defect-mindset/: SKILL.md
.github/workflows/: test.yml
.guild_templates/: .aider.conf.yml  .cursorrules  CLAUDE.md  CONVENTIONS.md  SESSION_CHECKPOINT.md
agents/: AGENTS.md  ai-memory-specialist.md  cross-platform-mobile.md  fintech-specialist.md  insurance-specialist.md  laravel-developer.md  native-ios.md  principal-engineer.md  security-engineer.md
archive_not_use/: AI_INSTRUCTION.md  WORKFLOW_GUIDE.md
dashboard/: app.js  index.html  style.css
not_use/: discord_listener.py  serve_dashboard.py  setup_env.py
scripts/: __init__.py  ask_boss.py  confluence_bridge.py  discord_listener.py  discord_mcp_server.py  jira_bridge.py  refactor.sh  register_project.py  serve_dashboard.py  setup_env.py  setup_git_hooks.py  sync_customizations.py  test_mcp_logic.py
skills/: INDEX.md
skills/acronym-namer/: SKILL.md
skills/backlog-refinement/: SKILL.md
skills/confluence-sync/: SKILL.md
skills/example/: SKILL.md
skills/git-workflow/: SKILL.md
skills/next-task/: SKILL.md
skills/project-audit-reviewer/: SKILL.md
skills/release-notes-writer/: SKILL.md
skills/system-design-rules/: SKILL.md
skills/task-estimation/: SKILL.md
src/: mock_discord.py
src/core/: __init__.py  registry.py
src/drunken_agy/clients/: jira_bridge.py
src/drunken_agy/core/: agents.py  utils.py
src/drunken_agy/mcp/: discord_mcp.py
src/drunken_agy/routes/: serve_dashboard.py
src/drunken_agy/services/: discord_listener.py
src/drunken_agy/services/dashboard/: server.py
src/drunken_agy/services/discord/: __init__.py  bot.py  commands.py  (+5 more)
src/drunken_team/models/: base.py  device.py  subscription.py  tenant.py
src/drunken_team/routes/: serve_dashboard.py
src/drunken_team/services/: discord_listener.py
src/route/: serve_dashboard.py
src/service/: discord_listener.py  discord_router.py  discord_runner.py  discord_utils.py  guild_mcp.py
tests/: test_confluence_bridge.py  test_discord_listener.py  test_discord_router.py  test_discord_runner.py  test_discord_utils.py  test_guild_mcp.py  test_jira_bridge.py  test_jira_workflow.md  test_models.py  test_registry.py  test_serve_dashboard.py  test_utils.py
