[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drunken-team"
version = "1.6.0"
description = "Drunken Team Inn gateway and dashboard utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "discord.py>=2.0.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0"
]
[project.scripts]
drunken-setup = "scripts.setup_env:main"
drunken-dashboard = "scripts.serve_dashboard:main"
drunken-listen = "scripts.discord_listener:main"
drunken-register = "scripts.register_project:main"


[tool.setuptools]
packages = ["scripts", "drunken_team", "drunken_team.services", "drunken_team.routes"]
package-dir = {"drunken_team" = "src/drunken_team"}
